# Skill_EE

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: rewrite_strategies.json
configs/policies/: frozen_selector.json
configs/splits/: full_profile_88.txt  heldout_20.txt  template_calibration_12.txt
docs/: artifact_scope.md  reproducibility.md
examples/skill_rewrites/: README.md
examples/skill_rewrites/adaptive-cruise-control/policy_selected/csv-processing/: SKILL.md
examples/skill_rewrites/adaptive-cruise-control/policy_selected/pid-controller/: SKILL.md
examples/skill_rewrites/adaptive-cruise-control/policy_selected/simulation-metrics/: SKILL.md
examples/skill_rewrites/adaptive-cruise-control/policy_selected/vehicle-dynamics/: SKILL.md
examples/skill_rewrites/civ6-adjacency-optimizer/policy_selected/civ6lib/: SKILL.md
examples/skill_rewrites/civ6-adjacency-optimizer/policy_selected/hex-grid-spatial/: SKILL.md
examples/skill_rewrites/civ6-adjacency-optimizer/policy_selected/map-optimization-strategy/: SKILL.md
paper/figures/: README.md
results/diagnostics/: README.md  heldout_economic_evidence.md  skill_structure_profile.csv  skill_structure_profile.md
results/paper_tables/: README.md  ablation_and_transfer.csv  main_results.csv
scripts/: compute_metrics.py  learn_policy.py  materialize_policy_variants.py  profile_tasks.py  rewrite_skills.py
src/skill_economy/: __init__.py  materialize.py  metrics.py  policy.py  profiling.py  strategies.py
tests/: test_metrics.py  test_policy.py
(+7 files in other folders)
