[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-aware-skill-rewriting"
version = "0.1.0"
description = "Core code and paper artifacts for cost-aware skill rewriting experiments."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "openai>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
plot = [
    "matplotlib>=3.8",
    "numpy>=1.26",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
